// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceCount /> returns correct face count snapshot with faces 1`] = `
<div
  className="mb2"
>
  <h3>
    I am able to grab 
    <span
      className="f2-ns f3 white"
    >
      5
    </span>
     faces from your image!
  </h3>
</div>
`;

exports[`<FaceCount /> returns correct face count snapshot with no faces 1`] = `
<div
  className="mb2"
>
  <h3
    className="f3"
  >
    Counting faces...
  </h3>
</div>
`;
